     establishing an HTTPS connection if the server's certificate
     doesn't match the host name. The default behaviour has been
     changed to disable this check.

  Fix bug 804272 - console results table column order varies according
  to how classes are packaged. Thanks to Karl Wyer for the report.

  Updated TCPProxy documentation.


Grinder 3.0-beta10
------------------

  Fix saving of console data. (Bug 749461).


Grinder 3.0-beta9
-----------------

  Incorporate HTTPClient HTTPS patch into main distribution. The Grinder
  now *requires* the JSSE, so you must install it if you are using a
  version of the J2SE earlier than 1.4.

  Fix use of J2SE 1.4.1 Color constants. Should compile with J2SE 1.3.1
  again. Thanks to Kumar Mettu for the report.

  Minor fixes to how the HTTP Plugin TCPProxy filter parses content
  length.

  Minor fidling with timing.

  Tutorial from Richard Perks.

  Incorporate the jEdit Syntax package which will be used for
  development of a console script editor. The basics of the editor are
  there, but will not be functional until I've reworked the
  communications layer to allow the script to be distributed.

  The HTTP plugin now records the HTTP response status code to the
  data log for HTTPRequests that are wrapped in Tests. If multiple
  HTTPRequests are wrapped in a Test, the status code of the last
  response is recorded. Thanks to Carlos Franco for the idea.

  Incorporate patch from Bill Schnellinger: Fix
  HTTPPluginTCPProxyFilter so that large data uploads (>1K) are stored
  in separate data files rather than inlined in the script. This
  should fix bug 702022.

  Fulfil Feature Request 732676 raised by Bertrand Ave by adding a
  "milliseconds since start" column to the data file.

  French console translation from Bertrand Ave.

  Example script that interprets an grinder.properties HTTP test
  script for The Grinder 2.


Grinder 3.0-beta8
-----------------
